--- a/en/x/XSS.803501.wikitext
+++ b/en/x/XSS.803501.wikitext
@@ -3,4 +3,4 @@
 ==={{initialism}}===
 {{infl|en|initialism}}
 
-# [[w:Cross-site scripting|Cross-site lol]].
+# [[w:Cross-site scripting|Cross-site scripting]].
