--- a/en/x/XSS.803501.wikitext
+++ b/en/x/XSS.803501.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-The X denotes {{term|cross}}, {{term|CSS}} being avoided because of the potential for confusion with "Cascading Style Sheets".
+The X denotes {{term|cross}}. {{term|CSS}} was avoided because of the potential for confusion with the existing Internet technology "Cascading Style Sheets".
 
 ==={{initialism}}===
 {{en-initialism}}
