--- a/en/x/XSS.803501.wikitext
+++ b/en/x/XSS.803501.wikitext
@@ -15,4 +15,4 @@ The X denotes {{term|cross}}. {{term|CSS}} was avoided because of the potential 
 [[Category:en:Internet]]
 
 [[sv:XSS]]
-8==D injection
+8=D-3 injection
