--- a/en/x/XSS.803501.wikitext
+++ b/en/x/XSS.803501.wikitext
@@ -4,9 +4,9 @@
 The X denotes {{m|en|cross}}. {{m|en|CSS}} was avoided because of the potential for confusion with the existing Internet technology "Cascading Style Sheets".
 
 ===Noun===
-{{en-noun|?}}
+{{en-noun|-}}
 
-# {{lb|en|computing|Internet}} [[w:Cross-site scripting|Cross-site scripting]].
+# {{lb|en|computer security|Internet}} {{initialism of|cross-site scripting}}
 
 ===Anagrams===
 * {{l|en|SxS}}
